--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -115,6 +115,102 @@
               <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
             </div><!-- /.col-lg-4 -->
           </div><br/><br/><hr>
+
+          <!--cards open-->
+<div class="container"><br>
+    <h1 style="text-align:center;">Our Team</h1><br>
+    <div class="row">
+        <!--Buvaneswari Strted-->
+        <div class="col-md">
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/buvana1.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name:Bhuvaneshwari</h5>
+                    <p class="card-text">Contact No:  <br> Email: kiran.waywale@gmail.com</p>
+                    <a href="#" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <!-- Ended-->
+
+        <!--Primium Customers Strted-->
+        <div class="col-md">
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/sivani.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name: K</h5>
+                    <p class="card-text">Contact No: 8296722006 <br> Email: kkrishnaveni644@gmail.com</p>
+                    <a href="https://github.com/KrishnaveniKAPS" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <!--Primium Customers Ended-->
+
+        <!--Kundan kumar Strted-->
+        <div class="col-md">
+            <div class="card">
+                <img class="card-img-top" src="./assets/images/kundan.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name:Kundan Kumar</h5>
+                    <p class="card-text">Contact No: 843197651 <br> Email: kundan.rrk21gmail.com</p>
+                    <a href="https://github.com/kundanrrk/" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                </div>
+            </div>
+        </div>
+        <!--Kundar kumar Ended-->
+    </div>
+</div>
+<!--cards ended-->
+<!--cards open-->
+<div class="container"><br>
+    <div class="row">
+        <!--venkatesh card Strted-->
+        <div class="col-md">
+            <div class="card">
+                <img class="card-img-top" src="./assets/images/venkat.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name: K Venkateswara Reddy</h5>
+                    <p class="card-text">Contact No: 9951619130 <br> Email: kvenkateswara502@gmail.com</p>
+                    <a href="https://github.com/kvenkateswarareddy" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <!--venkatesh card Ended-->
+
+        <!--charan card Started-->
+        <div class="col-md">
+            <div class="card">
+                <img class="card-img-top" src="./assets/images/charan.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name: Charana H U</h5>
+                    <p class="card-text">Contact No: 9481368353 <br> Email: charanhumail@gmail.com</p>
+                    <a href="https://github.com/charanhu1" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <!--charan card Ended-->
+
+        <!--NRI Customers Strted-->
+        <div class="col-md">
+            <!-- <div class="card">
+                <img class="card-img-top" src="./assets/images/charan.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Name:Charana H U</h5>
+                    <p class="card-text">Contact No:9481368353 Email:charanhumail@gmail.com</p>
+                    <a href="#" class="btn btn-danger">Connect</a>
+                </div>
+            </div> -->
+        </div>
+        <!--NRI Customers Ended-->
+    </div>
+</div>
+<!--cards ended-->
+
+
     
 
       
