--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -109,12 +109,19 @@
               </div>  
             </div>  
             <hr class="mx-n3">  
+            
+              
+              
+          <!-- added payment button-->
+          <!--passing make payment function-->
+          <div class="px-5 py-4">
+          <button (click)="makePayment(price1)" type="submit" class="btn btn-primary">Pay
+              Now</button>&nbsp;&nbsp;
+          <!--Ended payment button-->  
+            
+          </div>
             <div class="px-5 py-4">  
-              <button type="submit" class="btn btn-primary btn-lg" href="#"> Pay Now </button>  
-            </div>  
-            <hr class="mx-n3">
-            <div class="px-5 py-4">  
-              <button type="submit" class="btn btn-primary btn-lg"> Submit </button>  
+              <button type="submit" class="btn btn-primary btn-lg" > Submit </button>  
             </div> 
           </div>  
         </div>  
