--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <br><br><br>
 <div class="container">
   <form action="SignIn.html">
-      <h1>Login</h1>
+      <h1>Log in</h1>
 
       <p>Don't have an account? <a style="text-decoration: none" href="#">Creat Your Account</a> it takes less than a minute</p>
 
@@ -20,7 +20,7 @@
       <br>
       <br>
          
-            <input class="form-check-input" type="checkbox" name="remember"> Remember me
+            <input class="form-check-input" type="checkbox" name="remember"><br> Remember me
          
           
       <button style="float: right;" type="submit" class="btn btn-primary">Submit</button>
