--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -114,15 +114,17 @@
               
           <!-- added payment button-->
           <!--passing make payment function-->
-          <div class="px-5 py-4">
-          <button (click)="makePayment(price1)" type="submit" class="btn btn-primary">Pay
-              Now</button>&nbsp;&nbsp;
+          
+          <button   style="float: left;" (click)="makePayment(price1)" type="submit" class="btn btn-primary ">Pay
+              Now</button>
           <!--Ended payment button-->  
             
-          </div>
-            <div class="px-5 py-4">  
-              <button type="submit" class="btn btn-primary btn-lg" > Submit </button>  
-            </div> 
+          
+          &nbsp;&nbsp;
+          
+              
+              <button style="right: inherit;" type="submit" class="btn btn-success " > Submit </button>  
+            
           </div>  
         </div>  
       </div>  
