--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <form action="SignIn.html">
         
-        <h1 >SignUp</h1>
+        <h1 >Sign Up</h1>
         
             <!--<label for="name">Name:</label>-->
             <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name">
@@ -24,9 +24,9 @@
            <br>
            <input type="password" class="form-control" id="pwd" placeholder="Confirm password" name="pswd">
             <br>
-            <button style="float: left;" type="submit" class="btn btn-warning">Reset</button>
+            <button style="float: left;" type="submit" class="btn btn-warning">Reset</button>&nbsp;&nbsp;
            
-            <button style="float: right;" type="submit" class="btn btn-primary">Submit</button>
+            <button style=" right: inherit;" type="submit" class="btn btn-primary">Submit</button>
             
         
         
