Revert "our team"

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -123,76 +123,76 @@
         <!--Buvaneswari Strted-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/buvana1.jpg" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/img/buvana1.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Name:Bhuvaneshwari</h5>
-                    <p class="card-text">Contact No:7338039604  <br> Email: kbhuvaneshwari28@gmail.com</p>
-                    <a href="https://bit.ly/3MzKRCd" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <p class="card-text">Contact No:  <br> Email: kiran.waywale@gmail.com</p>
+                    <a href="#" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
         </div>
-        <!--  Bhuvaneswari Ended-->
+        <!-- Ended-->
 
         <!--Primium Customers Strted-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/sivani.png" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/img/sivani.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Name: Sivani</h5>
-                    <p class="card-text">Contact No:9110234831  <br> Email: shivanibg22@gmail.com</p>
-                    <a href="https://github.com/shivanibg44/Infinity.git" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <h5 class="card-title">Name: K</h5>
+                    <p class="card-text">Contact No: 8296722006 <br> Email: kkrishnaveni644@gmail.com</p>
+                    <a href="https://github.com/KrishnaveniKAPS" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
         </div>
         <!--Primium Customers Ended-->
 
-        <!--hareesh Strted-->
+        <!--Kundan kumar Strted-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/Hareesh_1.jpg" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/images/kundan.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Name:G. Hareesh</h5>
-                    <p class="card-text">Contact No: 8688126661 <br> Email: hareeshraj279@gmail.com</p>
-                    <a href="https://bit.ly/3GEyNuV" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <h5 class="card-title">Name:Kundan Kumar</h5>
+                    <p class="card-text">Contact No: 843197651 <br> Email: kundan.rrk21gmail.com</p>
+                    <a href="https://github.com/kundanrrk/" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
         </div>
-        <!--hareesh Ended-->
+        <!--Kundar kumar Ended-->
     </div>
 </div>
 <!--cards ended-->
 <!--cards open-->
 <div class="container"><br>
     <div class="row">
-        <!--guru prasad card Strted-->
+        <!--venkatesh card Strted-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/guru.jpg" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/images/venkat.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Name: Guru Prasad</h5>
-                    <p class="card-text">Contact No:9845879581  <br> Email: gurucr4@gmail.com</p>
-                    <a href="http://shorturl.at/exCS2" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <h5 class="card-title">Name: K Venkateswara Reddy</h5>
+                    <p class="card-text">Contact No: 9951619130 <br> Email: kvenkateswara502@gmail.com</p>
+                    <a href="https://github.com/kvenkateswarareddy" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
         </div>
-        <!--guru prasad card Ended-->
+        <!--venkatesh card Ended-->
 
-        <!--malathi card Started-->
+        <!--charan card Started-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/malathi.jpg" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/images/charan.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Name: Malathi</h5>
-                    <p class="card-text">Contact No: 9986510305 <br> Email: malathisambaji24@gmail.com</p>
-                    <a href="https://tinyurl.com/y8583sdl" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <h5 class="card-title">Name: Charana H U</h5>
+                    <p class="card-text">Contact No: 9481368353 <br> Email: charanhumail@gmail.com</p>
+                    <a href="https://github.com/charanhu1" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
         </div>
-        <!--malathi card Ended-->
+        <!--charan card Ended-->
 
         <!--NRI Customers Strted-->
         <div class="col-md">
