--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -114,17 +114,15 @@
               
           <!-- added payment button-->
           <!--passing make payment function-->
-          
-          <button   style="float: left;" (click)="makePayment(price1)" type="submit" class="btn btn-primary ">Pay
-              Now</button>
+          <div class="px-5 py-4">
+          <button (click)="makePayment(price1)" type="submit" class="btn btn-primary">Pay
+              Now</button>&nbsp;&nbsp;
           <!--Ended payment button-->  
             
-          
-          &nbsp;&nbsp;
-          
-              
-              <button style="right: inherit;" type="submit" class="btn btn-success " > Submit </button>  
-            
+          </div>
+            <div class="px-5 py-4">  
+              <button type="submit" class="btn btn-primary btn-lg" > Submit </button>  
+            </div> 
           </div>  
         </div>  
       </div>  
