--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,14 +4,13 @@
       <ul>
       <br>
           
-          <li><a href="#"><i class="fas fa-address-card"></i>Dashboard</a></li>
-          <li><a href="#" ><i class="fas fa-address-card"></i>Policy</a></li>
-          <li><a href="#" ><i class="fas fa-blog"></i>My documents</a></li>
+          <li><a class="nav-link"routerLink="/policy-details" routerLinkActive="active-link"><i class="fas fa-address-card"></i> Policy Types</a></li>
+          <li><a class="nav-link"routerLink="/new-policy" routerLinkActive="active-link"><i class="fas fa-project-diagram"></i>New Policy</a></li>
+          <li><a class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link"><i class="fas fa-blog"></i>My Policy</a></li>
          
-          <li><a href="#" ><i class="fas fa-address-card"></i>My services</a></li>
-
+          <li><a href="#" ><i class="fa-solid fa-square-poll-horizontal"></i>Payment</a></li>
           <li> <a href="#" > 
-            <i class="fas fa-project-diagram"></i> <small>Settings</small> </a> </li>
+            <i class="fa fa-cog" ></i> <small>Settings</small> </a> </li>
       </ul> 
      
   </div>
