--- a/src/app/mypolicy/mypolicy.component.html
+++ b/src/app/mypolicy/mypolicy.component.html
@@ -4,14 +4,16 @@
 <div class="container">  
   
   <ul class="nav nav-pills">  
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  
-    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>  
+    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  &nbsp;&nbsp;
+    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li> &nbsp;&nbsp; 
     <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
     
      
   </ul> 
+  <br>
 </div>
-
+<hr class="new2">
+<div class="demo1">
 <div id="demo2" class="container tab-pane active" >
     <div class='table-responsive'>
       <h3>My policies</h3>
@@ -88,3 +90,4 @@
       
     </div>
   </div>
+</div>
