--- a/src/app/new-policy/new-policy.component.css
+++ b/src/app/new-policy/new-policy.component.css
@@ -14,3 +14,12 @@ body {
   border: 1px solid rgba(0,0,0,.125);  
   border-radius: .15rem;  
 }  
+
+hr.new3
+{
+border: solid rgb(255, 217, 0);
+border-radius: 10px;
+border-width: 3px;
+margin-left: 250px;
+margin-right: 100px;
+}
