--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -4,13 +4,14 @@
 <div class="container">  
   
   <ul class="nav nav-pills">  
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  
-    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>  
+    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li> &nbsp;&nbsp; 
+    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
     <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
     
      
   </ul> 
 </div>
+<hr class="new3">
 
 <section class="vh-100" style="background-color: white" height="100%">  
   <div class="container h-100">  
