--- a/src/app/policy-details/policy-details.component.html
+++ b/src/app/policy-details/policy-details.component.html
@@ -2,19 +2,22 @@
 
 <app-navbar></app-navbar>
 
+
 <div class="container">  
   
   <ul class="nav nav-pills">  
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  
-    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>  
+    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  &nbsp;&nbsp;
+    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
     <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
     
      
   </ul> 
 </div>
+
 <br>
 
 <hr class="new1">
+<div class="demo2">
 <div id="menu1" class="container tab-pane active" >
   <div class='table-responsive'>
     <!--table started-->
@@ -76,4 +79,5 @@
     </table>
     <!--table ended-->
   </div>
+</div>
 </div>
