--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -42,21 +42,13 @@
           </div>
           <div class="col">
             <br>
-            <button type="submit" class="btn btn-danger" style="border-radius: 20px;" id="register">Sign Up</button>
+            <button type="submit" class="btn btn-primary" style="border-radius: 20px;" id="register">Sign Up</button>
           </div>
         </div>
         <br>
       </form>
     </div>
-    <div class="card">
-      <img [src]="register" alt="">
-    </div>
-  </div>
-</div>
-<!--Login Ended-->
+   
 
 
 
-<!--Footer started-->
-<app-footer></app-footer>
-<!--Footer Ended-->
