--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,9 +11,12 @@
   {
     color: #000;
     text-align: center;
-    font-weight: bolder;
-    font-size: larger;
+   
+    font-size: large;
     text-decoration: dashed;
+  }
+  h1{
+    color: rgba(81, 81, 122, 0.801);
   }
   
   html {
