--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,13 +3,13 @@
 <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="./assets/img/c1.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/1.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="./assets/img/c2.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./assets/img/c3.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -22,28 +22,28 @@
   </button>
 </div>
 .
-
+<div class="card" style="box-shadow: 2px 2px 2px 2px rgb(15, 15, 15); border-radius: 5px;">
 <div class="container">
 .
-
-
   <div class="about-section">
     <div class="b">
-      <img src="./assets/img/in.jpeg" alt="infinity" style="width:60%">
+      <img src="./assets/img/l.jpg" alt="infinity" style="width:60%">
     </div>
-    <p>Let us Join infinity insurance ...!!</p>
+    <h1>Let us Join infinity insurance ...!!</h1>
     <p>Insurance is defined as a contract, which is called a policy, in which an individual or organisation receives
       financial protection and reimbursement of damages from the insurer or the insurance company. At a very basic
       level, it is some form of protection from any possible financial losses.
 
       The basic principle of insurance is that an entity will choose to spend small periodic amounts of money against a
       possibility of a huge unexpected loss. Basically, all the policyholder pool their risks together. Any loss that
-      they suffer will be paid out of their premiums which they pay.</p>
+      they suffer will be paid out of their premiums which they pay. </p>
   </div>
   <div class="a">
     <h2 style="text-align:center"><b>
         <p width="50%" height="50px" direction="right"></p>
       </b></h2>
+  </div>
+  </div>
   </div>
 
   
