--- a/src/app/policy-details/policy-details.component.html
+++ b/src/app/policy-details/policy-details.component.html
@@ -2,18 +2,27 @@
 
 <app-navbar></app-navbar>
 
-
+<div class = "demo3">
 <div class="container">  
   
   <ul class="nav nav-pills">  
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+
     <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  &nbsp;&nbsp;
+    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li> &nbsp;&nbsp;
     <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
-    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
-    
+      
      
   </ul> 
 </div>
-
+</div>
 <br>
 
 <hr class="new1">
