--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<div class = "container">
 <div class="container my-4 ">
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
@@ -9,10 +9,11 @@
             </p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/img3.png" alt=""  height="5000%" width="5000%">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/a1.jpg" alt=""  height="5000%" width="5000%">
            
         </div>
     </div>
+    <br> <br> <br>
 
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 ">
@@ -20,10 +21,11 @@
             <p class="lead">The online application process to buy this plan  is very simple and can be completed in  few minutes.You just need to enter your full name, marital status, highest eduction level, occupation, PAN number and your communication address.Health details like height, weight and details of pre-existing health conditions.Documents needed to be uploaded like PAN card, Aadhar card,Address proof(Driving licence,Passport) and Income proof(Salary slip).</p>
         </div>
         <div class="col-md-5 ">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/online1.jpg" alt="" height="1000%" width="1000%">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/a2.jpg" alt="" height="1000%" width="1000%">
 
         </div>
     </div>
+    <br> <br> <br>
 
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2 ">
@@ -31,20 +33,22 @@
             <p class="lead">Yes, it is safe to buy insurance plan online, You can purchase insurance plan online with varified payment methods like UPI, debit or credit card, or net banking. As long as you select a reputable insurance company. You have nothing to worry about in case of any issues, you can also reach out to the customer service team.</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/safe1.png" alt="" height="2050%" width="2050%">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/3.jpg" alt="" height="2050%" width="2050%">
 
         </div>
     </div>
+    <br><br>
 
-</div><hr>
+</div>
 
-<h1 style="text-align:center">SERVICES</h1><br/>
+
+<h1 style="text-align:center">REVIEWS</h1><br/>
 
 <div class="container">
 
     <div class="row">
         <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/travel.png"  alt="" height="50%" width="50%">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review1.jpg"  alt="" height="50%" width="50%">
   
           <h2>Travel Insurance</h2>
           <p>Travel insurance is a type insurance that covers different risks while travelling.It covers medical expenses
@@ -55,7 +59,7 @@
          <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/health.jpg"  alt="" height="50%" width="50%">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review2.jpg"  alt="" height="50%" width="50%">
   
   
           <h2>Health Insurance</h2>
@@ -65,58 +69,24 @@
           <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/flood.jpg"  alt="" height="50%" width="50%">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review3.jpg"  alt="" height="50%" width="50%">
   
   
           <h2>Flood Insurance</h2>
           <p>Flood insurance is a type of insurance that covers a dwelling for losses sustained by water damage specifically due to flooding
                caused by heavy or prolonged rain,melting snow,coastal storm surges,blocked storm drainage systems or levee dam failure.</p>
           <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
-        </div><!-- /.col-lg-4 -->
+        </div>
+        
+        <!-- /.col-lg-4 -->
       </div><br/><br/>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <br>
-
-      <div class="container">
-
-        <div class="row">
-            <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/life.jpg"  alt="" height="50%" width="50%">
+        
       
-              <h2>Life Insurance</h2>
-              <p>Travel insurance is a type insurance that covers different risks while travelling.It covers medical expenses
-                  lost luggage, flight cancellations and other losses that a traveller can incur while travelling.Travel Insurance is usaually taken
-                  from the day of travel till the time the traveller reaches back to their place.
-              </p>
-              
-             <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/car.jpg"  alt="" height="50%" width="50%">
-      
-      
-              <h2>Car Insurance</h2>
-              <p>A health insurance policy extends coverage against medical expenses incurred owing to accidents,illeness or injury.
-                   During this period, if an insured meets with an accidents
-                 the expenses incurred for treatment purposes are borne by the insurance provider.</p>
-              <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/two.webp"  alt="" height="50%" width="50%">
-      
-      
-              <h2>Two Weeler Insurance</h2>
-              <p>Flood insurance is a type of insurance that covers a dwelling for losses sustained by water damage specifically due to flooding
-                   caused by heavy or prolonged rain,melting snow,coastal storm surges,blocked storm drainage systems or levee dam failure.</p>
-              <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
-            </div><!-- /.col-lg-4 -->
-          </div><br/><br/><hr>
-
-          <!--cards open-->
 <div class="container"><br>
     <h1 style="text-align:center;">Our Team</h1><br>
     <div class="row">
@@ -209,6 +179,15 @@
     </div>
 </div>
 <!--cards ended-->
+</div>
+
+
+
+
+
+
+
+
 
 
     
