--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
 <!-- Footer -->
+
 <footer class="text-center text-lg-start text-muted">
     <br>
   
@@ -10,8 +11,8 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="text-align: justify;">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-5">
-              <i class="bi bi-infinity"></i> QUICK LINKS
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fa fa-infinity"></i> QUICK LINKS
             </h6>
             <p>
                 <a routerLink="/home" class="text-reset">Home</a>
@@ -46,7 +47,7 @@
               <a routerLink="" class="text-reset">Health Insurance</a>
             </p>
             <p>
-              <a routerLink="" class="text-reset">Car Insurance</a>
+              <a routerLink="" class="text-reset"> Car Insurance</a>
             </p>
             <p>
               <a routerLink="" class="text-reset">Two weeler Insurance</a>
@@ -83,16 +84,16 @@
               CONTACT US
             </h6>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-facebook"></i> Facebook</a>
+              <a href="#!" class="text-reset"><i class="fab fa-facebook"></i> Facebook</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi-bi-instagram"></i> Instagram</a>
+              <a href="#!" class="text-reset"><i class="fab fa-instagram"></i> Instagram</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi-bi-twitter"></i> Twitter</a>
+              <a href="#!" class="text-reset"><i class="fab fa-twitter"></i> Twitter</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi-bi-linkedin"></i> LinkedIn</a>
+              <a href="#!" class="text-reset"><i class="fab fa-linkedin"></i> LinkedIn</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -102,11 +103,4 @@
     </section>
     <!-- Section: Links  -->
   
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">TEAM PUSHPA</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+    
