--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,9 +20,7 @@
       <br>
       <br>
          
-            <input class="form-check-input" type="checkbox" name="remember"><br> Remember me
-         
-          
-      <button style="float: right;" type="submit" class="btn btn-primary">Submit</button>
+            
+      <button style="float: left;" type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
