--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,38 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="landing" routerLinkActive="active-link"> <i class="bi bi-infinity"></i>INFINITY INSURANCE</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+  <a class="navbar-brand" href="#"><i class="fa fa-infinity"></i> INFINITY INSURANCE</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        
-        <li class="nav-item">
-          <a class="nav-link"routerLink="/home" routerLinkActive="active-link">Home</a>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" routerLink="/about">About</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" routerLink="/services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">LogIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="active-link"> About</a>
+            <a class="nav-link" routerLink="/register">SignUp</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link" routerLink = "/policy-details" routerLinkActive="active-link"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Services
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="nav-link" routerLink = "/hi" >Health Insurance</a></li>
-            <li><a class = "nav-link" routerLink = "/li" >Term Life Insurance</a></li>
-            <li><a class = "nav-link" routerLink = "/ci" >Car Insurance</a></li>
-            <li><a class="nav-link" routerLink = "/two" >Two Wheeler Insurance</a></li>
-            <li><a class="nav-link" routerLink = "" >House Loan</a></li>
-           
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active-link">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/register" routerLinkActive="active-link">Signup</a>
-        </li>
-    </ul>     
-    </div>
+       
+         
+      </ul>
+     
+          
   </div>
 </nav>
+<br>
+<br>
