--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
+<br>
+<h1 style="text-align:center">IMPORTANCE</h1>
+<hr>
 <div class = "container">
 <div class="container my-4 ">
     <div class="row featurette d-flex justify-content-center align-items-center">
@@ -40,9 +43,11 @@
     <br><br>
 
 </div>
-
+<hr>
+<br>
 
 <h1 style="text-align:center">REVIEWS</h1><br/>
+<hr>
 
 <div class="container">
 
@@ -79,16 +84,17 @@
         </div>
         
         <!-- /.col-lg-4 -->
+        
       </div><br/><br/>
       <br>
       <br>
-      <br>
-      <br>
-      <br>
-        
-      
+    
+        <hr>
+      <h1 style="text-align:center;">Our Team</h1><br>
+      <hr>
 <div class="container"><br>
-    <h1 style="text-align:center;">Our Team</h1><br>
+    
+    
     <div class="row">
         <!--Buvaneswari Strted-->
         <div class="col-md">
