--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,6 @@
       <br>
          
             
-      <button style="float: left;" type="submit" class="btn btn-primary">Submit</button>
+      <button class="nav-link" routerLink="/policy-details" style="float: left;" type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
