--- a/src/app/mypolicy/mypolicy.component.html
+++ b/src/app/mypolicy/mypolicy.component.html
@@ -1,17 +1,32 @@
 <app-sidebar></app-sidebar>
 <app-navbar></app-navbar>
 
-<div class="container">  
-  
-  <ul class="nav nav-pills">  
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  &nbsp;&nbsp;
-    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li> &nbsp;&nbsp; 
-    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
+<div class = "demo3">
+  <div class="container">  
     
-     
-  </ul> 
+    <ul class="nav nav-pills">  
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      
+      
+  
+      <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/policy-details" routerLinkActive="active-link">Policy Types</a></li> 
+      <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
+      <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li> &nbsp;&nbsp;
+       
+    </ul> 
+  </div>
+  </div>
   <br>
-</div>
+
 <hr class="new2">
 <div class="demo1">
 <div id="demo2" class="container tab-pane active" >
