--- a/src/app/new-policy/new-policy.component.html
+++ b/src/app/new-policy/new-policy.component.html
@@ -1,20 +1,35 @@
 <app-sidebar></app-sidebar>
 <app-navbar></app-navbar>
 
-<div class="container">  
-  
-  <ul class="nav nav-pills">  
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li> &nbsp;&nbsp; 
-    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
-    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li>  
+<div class = "demo3">
+  <div class="container">  
     
-     
-  </ul> 
-</div>
+    <ul class="nav nav-pills">  
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      &nbsp;&nbsp;
+      
+      
+  
+      <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/policy-details" routerLinkActive="active-link">Policy Types</a></li> 
+      <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
+      <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li> &nbsp;&nbsp;
+       
+    </ul> 
+  </div>
+  </div>
+  
 <hr class="new3">
 
-<section class="vh-100" style="background-color: white" height="100%">  
-  <div class="container h-100">  
+<section style="background-color: white" height="100%">  
+  <div class="container">  
     <div class="row d-flex justify-content-center align-items-center h-100">  
       <div class="col-xl-9">  
         <h1 class="text-white mb-4" style="color: #21bd48;"> Online Job Registration form </h1>  
@@ -132,4 +147,5 @@
     </div>  
   </div>  
 </section>  
-  
+<br>
+<br>
