--- a/src/app/policy-details/policy-details.component.css
+++ b/src/app/policy-details/policy-details.component.css
@@ -1,12 +1,28 @@
+.demo1
+{
+  border: rgb(0, 51, 128);
+  border-width: 5px;
+  border-style: solid;
+  margin-left: 250px;
+  margin-right: 50px;
+}
+hr.new2
+{
+border: solid rgb(255, 217, 0);
+border-radius: 10px;
+border-width: 3px;
+margin-left: 250px;
+margin-right: 100px;
+}
 a{
   color:black;
 }
 .nav-link.active{
-  background-color: 	#df4759;
+  background-color: 	#2e2ccc;
   color: white;
 }
 a:hover{
-  background-color: 	#df4759;
+  background-color: 	#2e2ccc;
   color: white;
 }
 
@@ -26,7 +42,7 @@ hr.new1
 border: solid rgb(255, 217, 0);
 border-radius: 10px;
 border-width: 3px;
-margin-left: 220px;
+margin-left: 200px;
 margin-right:auto
 }
 .demo2
@@ -34,10 +50,12 @@ margin-right:auto
   border: rgb(0, 51, 128);
   border-width: 5px;
   border-style: solid;
-  margin-left: 200px;
+  margin-left: 200;
   margin-right: auto;
 }
 .demo3
 {
-  margin-left: 100px;
+  margin: left 100px;
+  margin-top: 25px;
+  
 }
