--- a/src/app/mypolicy/mypolicy.component.css
+++ b/src/app/mypolicy/mypolicy.component.css
@@ -14,3 +14,48 @@ border-width: 3px;
 margin-left: 250px;
 margin-right: 100px;
 }
+a{
+  color:black;
+}
+.nav-link.active{
+  background-color: 	#2e2ccc;
+  color: white;
+}
+a:hover{
+  background-color: 	#2e2ccc;
+  color: white;
+}
+
+@media only screen and (max-width: 1314px) {
+  [class="tab-content"] {
+    margin-left: 100px;
+  }
+}
+
+@media only screen and (max-width: 1314px) {
+  [class="nav nav-tabs"] {
+    margin-left: 100px;
+  }
+}
+hr.new1
+{
+border: solid rgb(255, 217, 0);
+border-radius: 10px;
+border-width: 3px;
+margin-left: 200px;
+margin-right:auto
+}
+.demo2
+{
+  border: rgb(0, 51, 128);
+  border-width: 5px;
+  border-style: solid;
+  margin-left: 200;
+  margin-right: auto;
+}
+.demo3
+{
+  margin: left 100px;
+  margin-top: 25px;
+  
+}
