--- a/src/app/policy-details/policy-details.component.html
+++ b/src/app/policy-details/policy-details.component.html
@@ -14,20 +14,23 @@
     &nbsp;&nbsp;
     &nbsp;&nbsp;
     &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    
+    
 
-    <li class="active"><a data-toggle="pill" href="#home1">Policy Types</a></li>  &nbsp;&nbsp;
-    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li> &nbsp;&nbsp;
+    <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/policy-details" routerLinkActive="active-link">Policy Types</a></li> 
     <li class="active"><a data-toggle="pill"  class="nav-link"routerLink="/mypolicy" routerLinkActive="active-link">My Policy</a></li>&nbsp;&nbsp;  
-      
+    <li class="active"><a data-toggle="pill"   class="nav-link"routerLink="/new-policy" routerLinkActive="active-link">New policy</a></li> &nbsp;&nbsp;
      
   </ul> 
 </div>
 </div>
 <br>
 
-<hr class="new1">
-<div class="demo2">
-<div id="menu1" class="container tab-pane active" >
+<hr class="new2">
+<div class="demo1">
+<div id="demo2" class="container tab-pane active" >
   <div class='table-responsive'>
     <!--table started-->
     <table class='table table-hover'>
@@ -88,5 +91,6 @@
     </table>
     <!--table ended-->
   </div>
-</div>
-</div>
+  </div>
+  </div>
+  
